# api-attrition

./: .coverage  .gitattributes  .gitignore  CI-CD.md  CLAUDE.md  Dockerfile  README.md  README_HF.md  STREAMLIT_DOCUMENTATION.md  app.py  database.db  deploy_to_hf.py  docker-compose.yml  main.py  packages.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start.sh  streamlit_launcher.py
.github/: DEPLOYMENT.md  HF_CONFIG.md  HF_DEPLOY_GUIDE.md
.github/workflows/: ci-cd.yml  deploy-hf.yml  streamlit.yml
.streamlit/: config.toml
api/: schemas.py
data/export-api/: attrition_model.joblib  original_features.joblib  test_employees.csv
database/: config.py  import_data.py  migrate_to_sqlite.py  models.py
pages/: 1_📊_Explorer.py  2_🔍_Recherche.py  3_📈_Statistiques.py  4_🎯_Prediction.py  9_🔧_Diagnostic.py
streamlit_app/: README.md  app.py  config.py  requirements.txt
streamlit_app/pages/: 1_📊_Explorer.py  2_🔍_Recherche.py  3_📈_Statistiques.py
streamlit_app/tests/functional/: test_app.py  test_pages.py
streamlit_app/tests/unit/: test_api_client.py  test_ui_components.py
streamlit_app/utils/: api_client.py  ui_components.py
tests/: conftest.py
tests/functional/: test_api_availability.py  test_pages.py  test_prediction_api.py
tests/unit/: test_api_client.py  test_config.py  test_ml_model.py
utils/: api_client.py  ui_components.py
