[project]
name = "api-attrition"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.10",
    "pandas==2.3.3",
    "plotly==5.18.0",
    "psycopg2-binary>=2.9.11",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "requests==2.31.0",
    "sqlalchemy>=2.0.44",
    "streamlit==1.30.0",
    "uvicorn>=0.38.0",
]
